--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     </header>
     <main class="main">
-
+        <div class = "beginning">Творческое объединение "Бензонасос"</div>
     </main>
     <footer class="footer">
-        
+
     </footer>
     <script src="script.js"></script>
 </body>
