--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main class="main">
         <div class = "beginning">Творческое объединение "Бензонасос"</div>
+        <div class="tree"></div>
     </main>
     <footer class="footer">
 
