--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="main">
         <div class = "beginning">Творческое объединение "Бензонасос"</div>
         <div class="info">
-            <span> Этот сайт посвещен идее. Не людям, не творчеству, а идее.</span>
+            Этот сайт посвещен идее. Не людям, не творчеству, а идее.
         </div>
 
     </main>
