--- a/letters.html
+++ b/letters.html
@@ -10,11 +10,11 @@
 <body>
     <header class = 'header'>
         <div class="tree"></div>
-        <div class="home" href = "https://maks-march.github.io/craby_music/index.html">
-            Главная
+        <div class="home">
+            <a class = "hyperlink" href = "index.html">Главная</a>
         </div>
-        <div class="home" href = "https://maks-march.github.io/craby_music/letters.html">
-            Стихи
+        <div class="home">
+            <a class = "hyperlink" href = "letters.html">Стихи</a>
         </div>
     </header>
     <main class="main">
