--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </main>
     <footer class="footer">
-
+        @сделано "Crabulus Sites Studio". Все права защищены.
     </footer>
     <script src="script.js"></script>
 </body>
